# azizka_rust_my_routes

./: Cargo.toml  Procfile  README.md
src/: main.rs
src/data/: layouts.rs  mod.rs  pages.rs
src/data/translations/: en.rs  kz.rs  mod.rs  ru.rs
src/helpers/: layout.rs  mod.rs  url.rs
src/routes/: home.rs  home_tests.rs  mod.rs
templates/: hello.html
templates/layouts/: default-layout.html  main-layout.html
templates/pages/: home-page.html
