[package]
name = "azizka_rust_my_routes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
sailfish = "0.4.0"
azizka_rust_i18n = "0.3.0"
tide-testing = "0.1.3"
